update: 完善了demo，增加了中文帮助文档

--- a/TDFScreenDebuggerExample/Podfile
+++ b/TDFScreenDebuggerExample/Podfile
@@ -8,6 +8,7 @@ target 'TDFScreenDebuggerExample' do
   pod 'TDFAPILogger'
   pod 'Masonry'
   pod 'ReactiveObjC'
+  pod 'ICTextView'
 
   # Pods for TDFScreenDebuggerExample
 
