--- a/TDFScreenDebuggerExample/Podfile
+++ b/TDFScreenDebuggerExample/Podfile
@@ -4,7 +4,7 @@ source 'git@git.2dfire-inc.com:ios/cocoapods-spec.git'
 
 target 'TDFScreenDebuggerExample' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
-  use_frameworks!
+#  use_frameworks!
 
   # Pods for TDFScreenDebuggerExample
   pod 'TDFScreenDebugger', :path => '../'
