--- a/TDFScreenDebuggerExample/Podfile
+++ b/TDFScreenDebuggerExample/Podfile
@@ -1,6 +1,5 @@
 # Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
-source 'git@git.2dfire-inc.com:ios/cocoapods-spec.git'
+ platform :ios, '9.0'
 
 target 'TDFScreenDebuggerExample' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
